--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.tutorialmod.rock": "Rock",
   "item.tutorialmod.meatball": "Meatball",
   "block.tutorialmod.meatball_block": "Meatball Block",
+  "block.tutorialmod.meatball_ore": "Meatball Ore",
   "creativetab.curiosities": "Curiosities"
 
 }
