added a craftable ore detector with a bit of a twist

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.tutorialmod.meatball": "Meatball",
   "block.tutorialmod.meatball_block": "Meatball Block",
   "block.tutorialmod.meatball_ore": "Meatball Ore",
+  "item.tutorialmod.ore_detector": "Ore Detector",
   "creativetab.curiosities": "Curiosities"
 
 }
