added a pipe drop block

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -4,6 +4,7 @@
   "block.tutorialmod.meatball_block": "Meatball Block",
   "block.tutorialmod.meatball_ore": "Meatball Ore",
   "item.tutorialmod.ore_detector": "Ore Detector",
+  "block.tutorialmod.sound_block": "Sound Block",
   "creativetab.curiosities": "Curiosities"
 
 }
