--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -5,6 +5,7 @@
   "block.tutorialmod.meatball_ore": "Meatball Ore",
   "item.tutorialmod.ore_detector": "Ore Detector",
   "block.tutorialmod.sound_block": "Sound Block",
+  "item.tutorialmod.soap": "Soap",
   "creativetab.curiosities": "Curiosities"
 
 }
